Update swagger
Later, will check how to better handle auto-generation.
